docs/build_errors3.log
Consolidate compiler generated dependencies of target cuda_girth_core
[ 36%] Built target cuda_girth_core
Consolidate compiler generated dependencies of target girth_cli
[ 40%] Building CXX object CMakeFiles/girth_cli.dir/src/host/main.cpp.o
/cugrith/cuda-girth/src/host/main.cpp: In function ‘int main(int, char**)’:
/cugrith/cuda-girth/src/host/main.cpp:20:30: error: ‘read_edge_list’ is not a member of ‘cg’
   20 |     cg::CsrGraph graph = cg::read_edge_list(path);
      |                              ^~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/girth_cli.dir/build.make:76: CMakeFiles/girth_cli.dir/src/host/main.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:170: CMakeFiles/girth_cli.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
